5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1815_2566.log
== TEST (2019-06-12 13:14:38) 
-- CODE:
from numpy import*

falta = array(eval(input("digite as faltas: ")))
f = size(falta)
a = zeros(6, dtype=int)

a1 = 0
a2 = 0
a3 = 0
a4 = 0
a5 = 0
a6 = 0

for i in range(size(falta)):
	 if	(falta[i] == 2):
			a1 = a1 + 1
		elif	(falta[i] == 3):
				a2 = a2 + 1
		elif	(falta[i] == 4):
				a3 = a3 + 1
		elif	(falta[i] == 5):
				a4 = a4 + 1
		elif	(falta[i] == 6):
				a5 = a5 + 1
		elif	(falta[i] == 7):
				a6 = a6 + 1
				
a[0] = a1
a[1] = a2
a[2] = a3
a[3] = a4
a[4] = a5
a[5] = a6

for f in range(6):
	 a = a[i]/100
		
		
print(round(1, a))
	
-- ERROR:
File "XXXX", line 17
    elif	(falta[i] == 3):
                        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:15:25) 
-- CODE:
from numpy import*

falta = array(eval(input("digite as faltas: ")))
f = size(falta)
a = zeros(6, dtype=int)

a1 = 0
a2 = 0
a3 = 0
a4 = 0
a5 = 0
a6 = 0

for i in range(size(falta)):
	 if	(falta[i] == 2):
			a1 = a1 + 1
	elif	(falta[i] == 3):
			a2 = a2 + 1
	elif	(falta[i] == 4):
			a3 = a3 + 1
	elif	(falta[i] == 5):
			a4 = a4 + 1
	elif	(falta[i] == 6):
			a5 = a5 + 1
	elif	(falta[i] == 7):
			a6 = a6 + 1
				
a[0] = a1
a[1] = a2
a[2] = a3
a[3] = a4
a[4] = a5
a[5] = a6

for f in range(6):
	 a = a[i]/100
		
		
print(round(1, a))
	
-- ERROR:
File "XXXX", line 17
    elif	(falta[i] == 3):
                        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:15:55) 
-- CODE:
from numpy import*

falta = array(eval(input("digite as faltas: ")))
f = size(falta)
a = zeros(6, dtype=int)

a1 = 0
a2 = 0
a3 = 0
a4 = 0
a5 = 0
a6 = 0

for i in range(size(falta)):
	 	if	(falta[i] == 2):
				a1 = a1 + 1
		elif	(falta[i] == 3):
				a2 = a2 + 1
		elif	(falta[i] == 4):
				a3 = a3 + 1
		elif	(falta[i] == 5):
				a4 = a4 + 1
		elif	(falta[i] == 6):
				a5 = a5 + 1
		elif	(falta[i] == 7):
				a6 = a6 + 1
				
a[0] = a1
a[1] = a2
a[2] = a3
a[3] = a4
a[4] = a5
a[5] = a6

for f in range(6):
	 a = a[i]/100
		
		
print(round(1, a))
	
-- ERROR:
File "XXXX", line 17
    elif	(falta[i] == 3):
                        ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:16:00) 
-- CODE:
from numpy import*

falta = array(eval(input("digite as faltas: ")))
f = size(falta)
a = zeros(6, dtype=int)

a1 = 0
a2 = 0
a3 = 0
a4 = 0
a5 = 0
a6 = 0

for i in range(size(falta)):
	 	if	(falta[i] == 2):
				a1 = a1 + 1
		elif	(falta[i] == 3):
				a2 = a2 + 1
		elif	(falta[i] == 4):
				a3 = a3 + 1
		elif	(falta[i] == 5):
				a4 = a4 + 1
		elif	(falta[i] == 6):
				a5 = a5 + 1
		elif	(falta[i] == 7):
				a6 = a6 + 1
				
a[0] = a1
a[1] = a2
a[2] = a3
a[3] = a4
a[4] = a5
a[5] = a6

for f in range(6):
	 a = a[i]/100
		
		
print(round(1, a))
	
-- ERROR:
File "XXXX", line 17
    elif	(falta[i] == 3):
                        ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:16:44) 
-- CODE:
from numpy import*

falta = array(eval(input("digite as faltas: ")))
f = size(falta)
a = zeros(6, dtype=int)

a1 = 0
a2 = 0
a3 = 0
a4 = 0
a5 = 0
a6 = 0

for i in range(size(falta)):
	 	if	(falta[i] == 2):
			a1 = a1 + 1
		elif(falta[i] == 3):
				a2 = a2 + 1
		elif(falta[i] == 4):
				a3 = a3 + 1
		elif(falta[i] == 5):
				a4 = a4 + 1
		elif(falta[i] == 6):
				a5 = a5 + 1
		elif(falta[i] == 7):
				a6 = a6 + 1
				
a[0] = a1
a[1] = a2
a[2] = a3
a[3] = a4
a[4] = a5
a[5] = a6

for f in range(6):
	 a = a[i]/100
		
		
print(round(1, a))
	
-- ERROR:
File "XXXX", line 16
    a1 = a1 + 1
              ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:18:07) 
-- CODE:
from numpy import*

falta = array(eval(input("digite as faltas: ")))
f = size(falta)
a = zeros(6, dtype=int)

a1 = 0
a2 = 0
a3 = 0
a4 = 0
a5 = 0
a6 = 0

for i in range(size(falta)):
		if	(falta[i] == 2):
			a1 = a1 + 1
		elif(falta[i] == 3):
			a2 = a2 + 1
		elif(falta[i] == 4):
			a3 = a3 + 1
		elif(falta[i] == 5):
			a4 = a4 + 1
		elif(falta[i] == 6):
			a5 = a5 + 1
		elif(falta[i] == 7):
			a6 = a6 + 1
				
a[0] = a1
a[1] = a2
a[2] = a3
a[3] = a4
a[4] = a5
a[5] = a6

for f in range(6):
	 a = a[i]/100
		
		
print(round(1, a))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:19:03) 
-- CODE:
from numpy import*

falta = array(eval(input("digite as faltas: ")))
f = size(falta)
a = zeros(6, dtype=int)

a1 = 0
a2 = 0
a3 = 0
a4 = 0
a5 = 0
a6 = 0

for i in range(size(falta)):
		if	(falta[i] == 2):
			a1 = a1 + 1
		elif(falta[i] == 3):
			a2 = a2 + 1
		elif(falta[i] == 4):
			a3 = a3 + 1
		elif(falta[i] == 5):
			a4 = a4 + 1
		elif(falta[i] == 6):
			a5 = a5 + 1
		elif(falta[i] == 7):
			a6 = a6 + 1
				
a[0] = a1
a[1] = a2
a[2] = a3
a[3] = a4
a[4] = a5
a[5] = a6

for f in range(6):
	 a[i] = a[i]/100
		
		
print(round(1, a))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:20:07) 
-- CODE:
from numpy import*

falta = array(eval(input("digite as faltas: ")))
f = size(falta)
a = zeros(6, dtype=int)

a1 = 0
a2 = 0
a3 = 0
a4 = 0
a5 = 0
a6 = 0

for i in range(size(falta)):
		if	(falta[i] == 2):
			a1 = a1 + 1
		elif(falta[i] == 3):
			a2 = a2 + 1
		elif(falta[i] == 4):
			a3 = a3 + 1
		elif(falta[i] == 5):
			a4 = a4 + 1
		elif(falta[i] == 6):
			a5 = a5 + 1
		elif(falta[i] == 7):
			a6 = a6 + 1
				
a[0] = a1
a[1] = a2
a[2] = a3
a[3] = a4
a[4] = a5
a[5] = a6

for f in range(size(a)):
	 a[i] = a[i]/100
		
		
print(round(1, a))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:21:18) 
-- CODE:
from numpy import*

falta = array(eval(input("digite as faltas: ")))
f = size(falta)
a = zeros(6, dtype=int)

a1 = 0
a2 = 0
a3 = 0
a4 = 0
a5 = 0
a6 = 0

for i in range(size(falta)):
		if	(falta[i] == 2):
			a1 = a1 + 1
		elif(falta[i] == 3):
			a2 = a2 + 1
		elif(falta[i] == 4):
			a3 = a3 + 1
		elif(falta[i] == 5):
			a4 = a4 + 1
		elif(falta[i] == 6):
			a5 = a5 + 1
		elif(falta[i] == 7):
			a6 = a6 + 1
				
a[0] = a1
a[1] = a2
a[2] = a3
a[3] = a4
a[4] = a5
a[5] = a6

for f in range(6):
	 a[f] = a[f]/100
		
		
print(round(1, a))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:21:49) 
-- CODE:
from numpy import*

falta = array(eval(input("digite as faltas: ")))
f = size(falta)
a = zeros(6, dtype=int)

a1 = 0
a2 = 0
a3 = 0
a4 = 0
a5 = 0
a6 = 0

for i in range(size(falta)):
		if	(falta[i] == 2):
			a1 = a1 + 1
		elif(falta[i] == 3):
			a2 = a2 + 1
		elif(falta[i] == 4):
			a3 = a3 + 1
		elif(falta[i] == 5):
			a4 = a4 + 1
		elif(falta[i] == 6):
			a5 = a5 + 1
		elif(falta[i] == 7):
			a6 = a6 + 1
				
a[0] = a1
a[1] = a2
a[2] = a3
a[3] = a4
a[4] = a5
a[5] = a6

for f in range(6):
	 a[f] = a[f]/100
		
		
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:22:50) 
-- CODE:
from numpy import*

falta = array(eval(input("digite as faltas: ")))
f = size(falta)
a = zeros(6, dtype=int)

a1 = 0
a2 = 0
a3 = 0
a4 = 0
a5 = 0
a6 = 0

for i in range(size(falta)):
		if	(falta[i] == 2):
			a1 = a1 + 1
		elif(falta[i] == 3):
			a2 = a2 + 1
		elif(falta[i] == 4):
			a3 = a3 + 1
		elif(falta[i] == 5):
			a4 = a4 + 1
		elif(falta[i] == 6):
			a5 = a5 + 1
		elif(falta[i] == 7):
			a6 = a6 + 1
				
		a[0] = a1
		a[1] = a2
		a[2] = a3
		a[3] = a4
		a[4] = a5
		a[5] = a6

	
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:26:29) 
-- CODE:
from numpy import*

falta = array(eval(input("digite as faltas: ")))
f = size(falta)
a = zeros(6, dtype=int)

a1 = 0
a2 = 0
a3 = 0
a4 = 0
a5 = 0
a6 = 0

for i in range(size(falta)):
		if	(falta[i] == 2):
			a1 = a1 + 1
		elif(falta[i] == 3):
			a2 = a2 + 1
		elif(falta[i] == 4):
			a3 = a3 + 1
		elif(falta[i] == 5):
			a4 = a4 + 1
		elif(falta[i] == 6):
			a5 = a5 + 1
		elif(falta[i] == 7):
			a6 = a6 + 1
				
		a[0] = a1
		a[1] = a2
		a[2] = a3
		a[3] = a4
		a[4] = a5
		a[5] = a6

for f in range(6):
	a[f] = (a[f]/size(falta))*100
	
	
print(round(2, a))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:27:28) 
-- CODE:
from numpy import*

falta = array(eval(input("digite as faltas: ")))
f = size(falta)
a = zeros(6, dtype=int)

a1 = 0
a2 = 0
a3 = 0
a4 = 0
a5 = 0
a6 = 0

for i in range(size(falta)):
		if	(falta[i] == 2):
			a1 = a1 + 1
		elif(falta[i] == 3):
			a2 = a2 + 1
		elif(falta[i] == 4):
			a3 = a3 + 1
		elif(falta[i] == 5):
			a4 = a4 + 1
		elif(falta[i] == 6):
			a5 = a5 + 1
		elif(falta[i] == 7):
			a6 = a6 + 1
				
		a[0] = a1
		a[1] = a2
		a[2] = a3
		a[3] = a4
		a[4] = a5
		a[5] = a6

for f in range(6):
	a[f] = (a[f]/size(falta))*100
	
	
b = round(1, a)
print(b)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:28:22) 
-- CODE:
from numpy import*

falta = array(eval(input("digite as faltas: ")))
f = size(falta)
a = zeros(6, dtype=int)

a1 = 0
a2 = 0
a3 = 0
a4 = 0
a5 = 0
a6 = 0

for i in range(size(falta)):
		if	(falta[i] == 2):
			a1 = a1 + 1
		elif(falta[i] == 3):
			a2 = a2 + 1
		elif(falta[i] == 4):
			a3 = a3 + 1
		elif(falta[i] == 5):
			a4 = a4 + 1
		elif(falta[i] == 6):
			a5 = a5 + 1
		elif(falta[i] == 7):
			a6 = a6 + 1
				
		a[0] = a1
		a[1] = a2
		a[2] = a3
		a[3] = a4
		a[4] = a5
		a[5] = a6

for f in range(6):
	a[f] = (a[f]/size(falta))*100
	
	

print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:31:03) 
-- CODE:
from numpy import*

falta = array(eval(input("digite as faltas: ")))
f = size(falta)
a = zeros(6, dtype=int)

a1 = 0
a2 = 0
a3 = 0
a4 = 0
a5 = 0
a6 = 0

for i in range(size(falta)):
		if	(falta[i] == 2):
			a1 = a1 + 1
		elif(falta[i] == 3):
			a2 = a2 + 1
		elif(falta[i] == 4):
			a3 = a3 + 1
		elif(falta[i] == 5):
			a4 = a4 + 1
		elif(falta[i] == 6):
			a5 = a5 + 1
		elif(falta[i] == 7):
			a6 = a6 + 1
				
		a[0] = a1
		a[1] = a2
		a[2] = a3
		a[3] = a4
		a[4] = a5
		a[5] = a6

for f in range(6):
	a[f] = (a[f]/size(falta))*100
	
	

print(round(a, 1))
	
-- EXECUTION TIME:
1.20031
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1815/2566/main.py", line 40, in <module>
    print(round(a, 1))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:31:15) 
-- CODE:
from numpy import*

falta = array(eval(input("digite as faltas: ")))
f = size(falta)
a = zeros(6, dtype=int)

a1 = 0
a2 = 0
a3 = 0
a4 = 0
a5 = 0
a6 = 0

for i in range(size(falta)):
		if	(falta[i] == 2):
			a1 = a1 + 1
		elif(falta[i] == 3):
			a2 = a2 + 1
		elif(falta[i] == 4):
			a3 = a3 + 1
		elif(falta[i] == 5):
			a4 = a4 + 1
		elif(falta[i] == 6):
			a5 = a5 + 1
		elif(falta[i] == 7):
			a6 = a6 + 1
				
		a[0] = a1
		a[1] = a2
		a[2] = a3
		a[3] = a4
		a[4] = a5
		a[5] = a6

for f in range(6):
	a[f] = (a[f]/size(falta))*100
	
	

print(round(a, 1))
	
-- EXECUTION TIME:
1.17675
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1815/2566/main.py", line 40, in <module>
    print(round(a, 1))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:31:23) 
-- CODE:
from numpy import*

falta = array(eval(input("digite as faltas: ")))
f = size(falta)
a = zeros(6, dtype=int)

a1 = 0
a2 = 0
a3 = 0
a4 = 0
a5 = 0
a6 = 0

for i in range(size(falta)):
		if	(falta[i] == 2):
			a1 = a1 + 1
		elif(falta[i] == 3):
			a2 = a2 + 1
		elif(falta[i] == 4):
			a3 = a3 + 1
		elif(falta[i] == 5):
			a4 = a4 + 1
		elif(falta[i] == 6):
			a5 = a5 + 1
		elif(falta[i] == 7):
			a6 = a6 + 1
				
		a[0] = a1
		a[1] = a2
		a[2] = a3
		a[3] = a4
		a[4] = a5
		a[5] = a6

for f in range(6):
	a[f] = (a[f]/size(falta))*100
	
	

print(round(a, 1))
	
-- EXECUTION TIME:
0.871258
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1815/2566/main.py", line 40, in <module>
    print(round(a, 1))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:31:26) 
-- CODE:
from numpy import*

falta = array(eval(input("digite as faltas: ")))
f = size(falta)
a = zeros(6, dtype=int)

a1 = 0
a2 = 0
a3 = 0
a4 = 0
a5 = 0
a6 = 0

for i in range(size(falta)):
		if	(falta[i] == 2):
			a1 = a1 + 1
		elif(falta[i] == 3):
			a2 = a2 + 1
		elif(falta[i] == 4):
			a3 = a3 + 1
		elif(falta[i] == 5):
			a4 = a4 + 1
		elif(falta[i] == 6):
			a5 = a5 + 1
		elif(falta[i] == 7):
			a6 = a6 + 1
				
		a[0] = a1
		a[1] = a2
		a[2] = a3
		a[3] = a4
		a[4] = a5
		a[5] = a6

for f in range(6):
	a[f] = (a[f]/size(falta))*100
	
	

print(round(a, 1))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:32:55) 
-- CODE:
from numpy import*

falta = array(eval(input("digite as faltas: ")))
f = size(falta)
a = zeros(6, dtype=int)

a1 = 0
a2 = 0
a3 = 0
a4 = 0
a5 = 0
a6 = 0

for i in range(size(falta)):
		if	(falta[i] == 2):
			a1 = a1 + 1
		elif(falta[i] == 3):
			a2 = a2 + 1
		elif(falta[i] == 4):
			a3 = a3 + 1
		elif(falta[i] == 5):
			a4 = a4 + 1
		elif(falta[i] == 6):
			a5 = a5 + 1
		elif(falta[i] == 7):
			a6 = a6 + 1
				
		a[0] = a1
		a[1] = a2
		a[2] = a3
		a[3] = a4
		a[4] = a5
		a[5] = a6

for f in range(6):
	po = round((a[f]/size(falta))*100, 1)
	a[f] = po
	
	

print(a)
	
-- EXECUTION TIME:
0.859204
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:33:00) 
-- CODE:
from numpy import*

falta = array(eval(input("digite as faltas: ")))
f = size(falta)
a = zeros(6, dtype=int)

a1 = 0
a2 = 0
a3 = 0
a4 = 0
a5 = 0
a6 = 0

for i in range(size(falta)):
		if	(falta[i] == 2):
			a1 = a1 + 1
		elif(falta[i] == 3):
			a2 = a2 + 1
		elif(falta[i] == 4):
			a3 = a3 + 1
		elif(falta[i] == 5):
			a4 = a4 + 1
		elif(falta[i] == 6):
			a5 = a5 + 1
		elif(falta[i] == 7):
			a6 = a6 + 1
				
		a[0] = a1
		a[1] = a2
		a[2] = a3
		a[3] = a4
		a[4] = a5
		a[5] = a6

for f in range(6):
	po = round((a[f]/size(falta))*100, 1)
	a[f] = po
	
	

print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:34:11) 
-- CODE:
from numpy import*

falta = array(eval(input("digite as faltas: ")))
f = size(falta)
a = zeros(6, dtype=int)

a1 = 0
a2 = 0
a3 = 0
a4 = 0
a5 = 0
a6 = 0

for i in range(size(falta)):
		if	(falta[i] == 2):
			a1 = a1 + 1
		elif(falta[i] == 3):
			a2 = a2 + 1
		elif(falta[i] == 4):
			a3 = a3 + 1
		elif(falta[i] == 5):
			a4 = a4 + 1
		elif(falta[i] == 6):
			a5 = a5 + 1
		elif(falta[i] == 7):
			a6 = a6 + 1
				
		a[0] = a1
		a[1] = a2
		a[2] = a3
		a[3] = a4
		a[4] = a5
		a[5] = a6

for f in range(6):
	po = round((a[f]/sum(falta))*100, 1)
	a[f] = po
	
	

print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:36:06) 
-- CODE:
from numpy import*

falta = array(eval(input("digite as faltas: ")))
f = size(falta)
a = zeros(6, dtype=int)

a1 = 0
a2 = 0
a3 = 0
a4 = 0
a5 = 0
a6 = 0

for i in range(size(falta)):
		if	(falta[i] == 2):
			a1 = a1 + 1
		elif(falta[i] == 3):
			a2 = a2 + 1
		elif(falta[i] == 4):
			a3 = a3 + 1
		elif(falta[i] == 5):
			a4 = a4 + 1
		elif(falta[i] == 6):
			a5 = a5 + 1
		elif(falta[i] == 7):
			a6 = a6 + 1
				
		a[0] = a1
		a[1] = a2
		a[2] = a3
		a[3] = a4
		a[4] = a5
		a[5] = a6
m = zeros(6)
for f in range(6):
	po = round((a[f]/size(falta))*100, 1)
	m = po
	
	

print(m)
	
-- EXECUTION TIME:
1.1607
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
37.5
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
32.0
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
30.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:36:52) 
-- CODE:
from numpy import*

falta = array(eval(input("digite as faltas: ")))
f = size(falta)
a = zeros(6, dtype=int)

a1 = 0
a2 = 0
a3 = 0
a4 = 0
a5 = 0
a6 = 0

for i in range(size(falta)):
		if	(falta[i] == 2):
			a1 = a1 + 1
		elif(falta[i] == 3):
			a2 = a2 + 1
		elif(falta[i] == 4):
			a3 = a3 + 1
		elif(falta[i] == 5):
			a4 = a4 + 1
		elif(falta[i] == 6):
			a5 = a5 + 1
		elif(falta[i] == 7):
			a6 = a6 + 1
				
		a[0] = a1
		a[1] = a2
		a[2] = a3
		a[3] = a4
		a[4] = a5
		a[5] = a6
m = zeros(6)
for f in range(6):
	po = round((a[f]/sum(a))*100, 1)
	m = po
	
	

print(m)
	
-- EXECUTION TIME:
1.00254
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
37.5
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
32.0
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
digite as faltas: 30.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:37:34) 
-- CODE:
from numpy import*

falta = array(eval(input("digite as faltas: ")))
f = size(falta)
a = zeros(6, dtype=int)

a1 = 0
a2 = 0
a3 = 0
a4 = 0
a5 = 0
a6 = 0

for i in range(size(falta)):
		if	(falta[i] == 2):
			a1 = a1 + 1
		elif(falta[i] == 3):
			a2 = a2 + 1
		elif(falta[i] == 4):
			a3 = a3 + 1
		elif(falta[i] == 5):
			a4 = a4 + 1
		elif(falta[i] == 6):
			a5 = a5 + 1
		elif(falta[i] == 7):
			a6 = a6 + 1
				
		a[0] = a1
		a[1] = a2
		a[2] = a3
		a[3] = a4
		a[4] = a5
		a[5] = a6
m = zeros(6)
for z in range(6):
	po = round(((a[z]/sum(a))*100), 1)
	m = po
	
	

print(m)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:38:03) 
-- CODE:
from numpy import*

falta = array(eval(input("digite as faltas: ")))
f = size(falta)
a = zeros(6, dtype=int)

a1 = 0
a2 = 0
a3 = 0
a4 = 0
a5 = 0
a6 = 0

for i in range(size(falta)):
		if	(falta[i] == 2):
			a1 = a1 + 1
		elif(falta[i] == 3):
			a2 = a2 + 1
		elif(falta[i] == 4):
			a3 = a3 + 1
		elif(falta[i] == 5):
			a4 = a4 + 1
		elif(falta[i] == 6):
			a5 = a5 + 1
		elif(falta[i] == 7):
			a6 = a6 + 1
				
		a[0] = a1
		a[1] = a2
		a[2] = a3
		a[3] = a4
		a[4] = a5
		a[5] = a6
m = zeros(6)
for z in range(6):
	po = round(((a[z]/sum(a))*100), 1)
	m[z] = po
	
	

print(m)
	
-- EXECUTION TIME:
0.97216
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
digite as faltas: [ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
digite as faltas: [15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:38:08) 
-- CODE:
from numpy import*

falta = array(eval(input("digite as faltas: ")))
f = size(falta)
a = zeros(6, dtype=int)

a1 = 0
a2 = 0
a3 = 0
a4 = 0
a5 = 0
a6 = 0

for i in range(size(falta)):
		if	(falta[i] == 2):
			a1 = a1 + 1
		elif(falta[i] == 3):
			a2 = a2 + 1
		elif(falta[i] == 4):
			a3 = a3 + 1
		elif(falta[i] == 5):
			a4 = a4 + 1
		elif(falta[i] == 6):
			a5 = a5 + 1
		elif(falta[i] == 7):
			a6 = a6 + 1
				
		a[0] = a1
		a[1] = a2
		a[2] = a3
		a[3] = a4
		a[4] = a5
		a[5] = a6
m = zeros(6)
for z in range(6):
	po = round(((a[z]/sum(a))*100), 1)
	m[z] = po
	
	

print(m)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:38:39) 
-- CODE:
from numpy import*

falta = array(eval(input("digite as faltas: ")))
f = size(falta)
a = zeros(6, dtype=int)

a1 = 0
a2 = 0
a3 = 0
a4 = 0
a5 = 0
a6 = 0

for i in range(size(falta)):
		if	(falta[i] == 2):
			a1 = a1 + 1
		elif(falta[i] == 3):
			a2 = a2 + 1
		elif(falta[i] == 4):
			a3 = a3 + 1
		elif(falta[i] == 5):
			a4 = a4 + 1
		elif(falta[i] == 6):
			a5 = a5 + 1
		elif(falta[i] == 7):
			a6 = a6 + 1
				
		a[0] = a1
		a[1] = a2
		a[2] = a3
		a[3] = a4
		a[4] = a5
		a[5] = a6
m = zeros(6)
for z in range(6):
	po = round(((a[z]/sum(a))*100), 1)
	m[z] = po
	
	

print(m)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:39:02) 
-- CODE:
from numpy import*

falta = array(eval(input("digite as faltas: ")))
f = size(falta)
a = zeros(6, dtype=int)

a1 = 0
a2 = 0
a3 = 0
a4 = 0
a5 = 0
a6 = 0

for i in range(size(falta)):
		if	(falta[i] == 2):
			a1 = a1 + 1
		elif(falta[i] == 3):
			a2 = a2 + 1
		elif(falta[i] == 4):
			a3 = a3 + 1
		elif(falta[i] == 5):
			a4 = a4 + 1
		elif(falta[i] == 6):
			a5 = a5 + 1
		elif(falta[i] == 7):
			a6 = a6 + 1
				
		a[0] = a1
		a[1] = a2
		a[2] = a3
		a[3] = a4
		a[4] = a5
		a[5] = a6
m = zeros(6)
for z in range(6):
	po = round(((a[z]/sum(a))*100), 1)
	m[z] = po
	
	

print(m)
	
-- EXECUTION TIME:
1.31556
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
